--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -149,6 +149,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   <!--footer end here-->
   <script src="/js/productPagination.js"></script>
   <script src="/js/productSearch.js"></script>
+  <script src="/js/commentApi.js"></script>
 </body>
 
 </html>
