--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,21 +6,8 @@
                 <a href="/product"><img src="/images/ba.png" alt="" class="img-responsive"></a>
             </div>
             <div class="col-md-6 banner-right simpleCart_shelfItem">
-                <span class="bann-heart"> </span>
-                <h2>Handbags</h2>
-                <h1>Sed perspiciatis unde</h1>
-                <h5 class="item_price">$200.00</h5>
-                <h6>Size Charts</h6>
-                <ul class="bann-btns">
-                    <li><select class="bann-size">
-                            <option value="select your location">Size</option>
-                            <option value="saab">Small</option>
-                            <option value="fiat">Medium</option>
-                            <option value="audi">Large</option>
-                        </select>
-                    </li>
-                    <li><a href="#" class="item_add">Add To Cart</a></li>
-                </ul>
+                <h2>Welcome to our store</h2>
+                <h1>Up to 50% Discount</h1>
             </div>
             <div class="clearfix"> </div>
         </div>
