--- a/views/product/product.hbs
+++ b/views/product/product.hbs
@@ -87,7 +87,7 @@
                     <br>
 
                     {{#if comments}}
-                    <div class="pagination col-md-12">
+                    <div class="pagination product-detail-pagination col-md-12">
                         <ul class="page-list">
                             <li class="page"><a href="#">&lt;&lt;</a></li>
                             {{#each pages}}
