--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,6 +8,8 @@
             <div class="col-md-6 banner-right simpleCart_shelfItem">
                 <h2>Welcome to our store</h2>
                 <h1>Up to 50% Discount</h1>
+                <ul class="bann-btns">
+                    <li><a href="/product/all" class="item_add">Shop now</a></li>
             </div>
             <div class="clearfix"> </div>
         </div>
