Update title for homepage

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -21,8 +21,8 @@
     <div class="container">
         <div class="blc-layer2-main">
             <div class="col-md-6 blc-layer2-left">
-                <h3>Title</h3>
-                <p>Thank you for visiting our shop</p>
+                <h3>About us</h3>
+                <p>We deliver quality fashion items for men and women with great services. </p>
             </div>
             <div class="col-md-6 blc-layer2-right">
 
@@ -37,9 +37,7 @@
     <div class="container">
         <div class="blc-layer4-main">
             <div class="col-md-6 blc-layer3-grids1">
-                <h6>Story</h6>
-                <h3>Title</h3>
-                <p>This is our product</h6>
+                <h6>Our product</h6>
                 <ul>
                     <li>
                         <h4>Temporibus autem quibusdam</h4>
